@@ -146,7 +146,8 @@ public class ViewportLayout implements LayoutManager, Serializable
 
     // vertical implementation of the above rules
     if ((! (view instanceof Scrollable) && viewPref.height < portBounds.height
-         || ((Scrollable) view).getScrollableTracksViewportHeight()))
+         || (view instanceof Scrollable
+            && ((Scrollable) view).getScrollableTracksViewportHeight())))
       viewPref.height = portBounds.height;
 
     if (portBounds.height >= viewMinimum.height)
@@ -160,7 +161,8 @@ public class ViewportLayout implements LayoutManager, Serializable
 
     // horizontal implementation of the above rules
     if ((! (view instanceof Scrollable) && viewPref.width < portBounds.width
-         || ((Scrollable) view).getScrollableTracksViewportWidth()))
+         || (view instanceof Scrollable
+         && ((Scrollable) view).getScrollableTracksViewportWidth())))
       viewPref.width = portBounds.width;
 
     if (portBounds.width >= viewMinimum.width)
