@@ -1,5 +1,10 @@
 2006-01-10  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/ViewportLayout.java
+	(layoutContainer): Fixed condition, to avoid ClasscastException.
+
+2006-01-10  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/plaf/basic/BasicSplitPaneDivider.java
 	(MouseHandler.mousePressed): Fixed indendation.
 	(MouseHandler.mouseDragged): Fixed indendation.
